--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
             </main>
             <aside class="history">
                 <h5>Previous Searches</h5>
-                <p id = "placeholder-history">No previous searches</p>
+                <p id = "placeholder">No previous searches</p>
             </aside>
 
         </section>
 
-    </header>
-
+     </header>
+    <footer>
+        <script data-num-rows=".5"
+src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js"
+type="text/javascript"></script> <br />
+<p>Copyright (c) 2021 Weather App by Charlie Moran & Theodore Frazier. All rights reserved</p>
+</footer>
 </body>
 
 </html>
