--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
             </main>
             <aside class="history">
                 <h5>Previous Searches</h5>
-                <p id = "placeholder">No previous searches</p>
+                <p id = "placeholder-history">No previous searches</p>
             </aside>
 
         </section>
 
      </header>
+     <div class="ads">
+        <script data-num-rows="4" id="ad"
+        src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js"
+        type="text/javascript"></script> <br />
+     </div>
+     
     <footer>
-        <script data-num-rows=".5"
-src="https://s3-us-west-2.amazonaws.com/kaboodle/kaboodle.js"
-type="text/javascript"></script> <br />
 <p>Copyright (c) 2021 Weather App by Charlie Moran & Theodore Frazier. All rights reserved</p>
 </footer>
 </body>
